<resources>
    <string name="app_name">IOT Core Things Demo</string>
    <string name="config_url">http://%1$s:8080</string>
    <string name="device_id">Device Id:</string>
    <string name="server">Server:</string>
    <string name="project_id">Project Id:</string>
    <string name="registry_id">Registry Id:</string>
    <string name="last_publish">Last Publish:</string>
    <string name="debug">Debug:</string>
    <string name="connect">Connect</string>
    <string name="unknown">Unknown</string>
    <string name="ssid">SSID</string>
    <string name="no_connection">No connection detected</string>
</resources>
