<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:onClick="showConnectForm"
                android:layout_marginTop="16dp"
                android:src="@drawable/access_point_network"
                android:id="@+id/connnectionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_margin="16dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/unknown"
                android:id="@+id/connnectionState"
                android:layout_toRightOf="@id/connnectionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/connectForm"
                android:visibility="gone"
                android:layout_below="@id/connnectionIcon"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:hint="@string/ssid"
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="passkey"
                android:id="@+id/wifiPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/connect"
                android:onClick="onWifiConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:id="@+id/deviceId"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:id="@+id/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/project_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:id="@+id/projectId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/registry_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="16dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:id="@+id/registryId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <ScrollView
        android:background="@color/debug"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:clipToPadding="false">
        <TextView
            tools:text="debug info"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:id="@+id/debugInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>
